--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/host/database_python_api"]
 	path = src/host/database_python_api
 	url = git@github.com:Center-for-Space-Engineering/database_python_api.git
+[submodule "src/host/logging_system_display_python_api"]
+	path = src/host/logging_system_display_python_api
+	url = git@github.com:Center-for-Space-Engineering/logging_system_display_python_api.git
