--- a/src/host/requirements.txt
+++ b/src/host/requirements.txt
@@ -1,22 +1,28 @@
+astroid==3.1.0
 beautifulsoup4==4.12.3
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
+dill==0.3.8
 Flask==3.0.0
 future==0.18.3
 iso8601==2.1.0
+isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mccabe==0.7.0
 numpy==1.26.1
 pandas==2.1.3
+platformdirs==4.2.1
+pylint==3.1.0
 pyserial==3.5
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
-serial==0.0.97
 six==1.16.0
 soupsieve==2.5
 termcolor==2.3.0
+tomlkit==0.12.4
 tzdata==2023.3
 Werkzeug==3.0.1
