--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "src/host/sensor_interface_api"]
 	path = src/host/sensor_interface_api
 	url = git@github.com:Center-for-Space-Engineering/sensor_interface_api.git
+[submodule "src/host/pytesting_api"]
+	path = src/host/pytesting_api
+	url = git@github.com:Center-for-Space-Engineering/pytesting_api.git
