update to work on distrubted system

--- a/src/host/main.yaml
+++ b/src/host/main.yaml
@@ -1,36 +1,17 @@
-#test interval seconds
-test_interval: 5
-
-#file location for failed and passed test (make sure to actually make this folder the system will not make it for you)
-#NOTE: these folders have to be inside the templates folder!
-failed_test_path: templates/failed_test
-passed_test_path: templates/passed_test
-
-#Maximum passed test Archive 
-max_passed_test: 15
-
 # Serial Configs
-batch_size_1: 8000
-batch_size_2: 32
+# this is how many bytes are recorded in a buffer before they are transmitted.
+batch_size_1: 1024
+batch_size_2: 64
 
-serial_listener_name: &serial_listener_name serial_listener_one
-serial_writer_name: &serial_writer_name serial_writer_one
+serial_listener_name: serial_listener_one
+serial_writer_name: serial_writer_one
 
-serial_listener_2_name: &serial_listener_2_name serial_listener_two
-serial_writer_2_name: &serial_writer_2_name serial_writer_two
+serial_listener_2_name: serial_listener_two
+serial_writer_2_name: serial_writer_two
 
 # Location of serial port on Raspberry Pi system
 uart_0: /dev/ttyS0
 uart_2: /dev/ttyAMA2
-
-# List of interfaces for system to use
-serial_listener_list:
-  - *serial_listener_name
-  - *serial_listener_2_name
-
-serial_writer_list:
-  - *serial_writer_name
-  - *serial_writer_2_name
 
 # Writer's NOTE
 # The Raspberry pi 4b has 5 Uart lines.
@@ -54,27 +35,5 @@ serial_writer_list:
 
 # Server Configs
 hostname: '144.39.167.206'  # get this by running hostname -I
-# hostname: '127.0.0.1'
-# port: 5000
-port: 8080
-server_listener_name: 'CSE_Server_Listener'  # this the name for the internal thread that collects server info 
-server_name_host: 'CSE_Host'  # this is the name for the thread that services all the web requests
-
-# Data Base configs
-data_base: 'Data Base'
-
-# Sensor configs
-sensor_config_dict:
-  # This dictionary holds all the sensors configuration, NOTE: the key must match the self.__name variable in the sobj_<sensor> object. 
-  # NOTE: The key here becomes part of a file name so make sure you use valid chars in the name. 
-  gps_board:
-      # This dictionary tells the GPS sensor how to configure itself.
-      tap_request: [*serial_listener_2_name]  # Index in the list can be the name of a serial listener or any sensors whose data you want to listen to or None (Example for none: None) 
-      publisher: 'yes'
-      publish_data_name: 'gps_packets'  # NOTE: NOT used right now
-      passive_active: 'passive'  # Passive sensors only publish when they receive then process data, active sensors always publish on an interval.
-      interval_pub: 'NA'  # We are not using this param because we are a passive publisher, however if the sensor is active we will need to set this interval to the desired rate. 
-      Sensor_data_tag: 0x24  # Hexadecimal representation of '$' This parameter is for the sensor class to search data from the tag, whether it comes from the serial line or from other sensors on the system.
-      # Binary tag representing the data terminator used by the sensor.
-      # Modify this tag to match the data terminator of additional sensors.
-      Sensor_terminator_data_tag: 0x0D0A  # Hexadecimal representation of '\r\n'
+port_serial_1: 5050
+port_serial_2: 5000
