just working away here

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "src/host/command_packets"]
 	path = src/host/command_packets
 	url = git@github.com:Center-for-Space-Engineering/command_packets.git
+[submodule "src/host/cse_instrument_control"]
+	path = src/host/cse_instrument_control
+	url = git@github.com:Center-for-Space-Engineering/cse_instrument_control.git
