--- a/src/host/main.yaml
+++ b/src/host/main.yaml
@@ -14,26 +14,26 @@ display_name : CSE_ground_station
 peripheral_config_dict:
   pi_one:
     host_name: '192.168.50.3'
-    connection_port : 8010
+    connection_port : 5000
     listener_port_list: 
       # Location of ports on Raspberry Pi system
       - name: gps_port_listener
-        port: 8020
+        port: 5020
         batch_size: 100
       - name: swp2_port_listener
-        port: 8050
+        port: 5050
         batch_size: 1024
-  pi_two:
-    host_name: '192.168.50.7'
-    connection_port : 8010
-    listener_port_list: 
-      # Location of ports on Raspberry Pi system
-      - name: gps_port_listener_aux
-        port: 8020
-        batch_size: 100
-      - name: aux_port_listener
-        port: 8050
-        batch_size: 150
+  # pi_two:
+  #   host_name: '192.168.50.7'
+  #   connection_port : 8010
+  #   listener_port_list: 
+  #     # Location of ports on Raspberry Pi system
+  #     - name: gps_port_listener_aux
+  #       port: 8020
+  #       batch_size: 100
+  #     - name: aux_port_listener
+  #       port: 8050
+  #       batch_size: 150
 
 
 # Writer's NOTE
